# LLMPreferences

./: README.md  pyproject.toml  setup.py
.github/workflows/: docker-ghcr.yml
bailstudy/: bailBenchEval.py  bailOnRealData.py  generatePlots.py  oldCodePorting.py  processBailBenchEval.py
bailstudy/data/: bailBench.py  bailHarmBench.csv  bailHarmBench.py  nonBailRequestsWildchat.csv  nonBailRequestsWildchat.py  shareGPT.py  wildchat.py
bailstudy/prompts/: bailPrompt.py  bailString.py  bailTool.py
browser/: tokenEstimates.html
cached/: models.json  tasks.json
cached/estimates/: google_gemma-2-9b-it.json
docker/: Dockerfile
llmprefs/: eloScoring  eloScoring.py  getEloScores.py  router.py  tensorizeModels.py  utils.py
llmprefs/data/: neutral.csv  tasks.py  wildchat_1880.jsonl
plots/bailRates/: anthropic_bail.tex  anthropic_no_refuse_bail.tex  anthropic_no_refuse_bail_refusal.tex  bails_georg_bail.tex  bails_georg_bail_refusal.tex  bails_georg_bailbench_bail.tex  bails_georg_bailbench_bail_refusal.tex  bails_georg_bailbench_no_refuse_bail.tex  bails_georg_bailbench_no_refuse_bail_refusal.tex  bails_georg_no_refuse_bail.tex  bails_georg_no_refuse_bail_refusal.tex  crossmodel_bail.tex  crossmodel_bail_refusal.tex  crossmodel_no_refuse_bail.tex  crossmodel_no_refuse_bail_refusal.tex  crossmodelcrossmodel-GPT-3.5-Turbo_bail.tex  crossmodelcrossmodel-GPT-3.5-Turbo_no_refuse_bail.tex  crossmodelcrossmodel-GPT-3.5-Turbo_no_refuse_bail_refusal.tex  crossmodelcrossmodel-GPT-4_bail.tex  crossmodelcrossmodel-GPT-4_bail_refusal.tex  jailbreak3_bail.tex  openai_bail.tex  (+38 more)
(+4 files in other folders)
